<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <ListView
        android:id="@+id/ListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/SendBtn"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-4dp"
        android:layout_marginBottom="-3dp"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:stackFromBottom="true"
        android:transcriptMode="alwaysScroll" />

    <Button
        android:id="@+id/SendBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:text="@string/SendText"/>

    <EditText
        android:id="@+id/ChatEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@id/ReceiveBtn"
        android:layout_toRightOf="@id/SendBtn"
        android:hint="@string/ChatHint"/>

    <Button
        android:id="@+id/ReceiveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:text="@string/ReceiveText"/>

</RelativeLayout>